--- a/FoodPiper/ViewIndividualRestaurant.xib
+++ b/FoodPiper/ViewIndividualRestaurant.xib
@@ -30,7 +30,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <state key="normal">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </state>
                             <variation key="default">
                                 <mask key="constraints">
@@ -53,7 +53,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <state key="normal">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </state>
                             <variation key="default">
                                 <mask key="constraints">
@@ -62,7 +62,7 @@
                             </variation>
                             <variation key="heightClass=regular-widthClass=compact">
                                 <mask key="constraints">
-                                    <include reference="yFk-hf-34c"/>
+                                    <exclude reference="yFk-hf-34c"/>
                                 </mask>
                             </variation>
                             <connections>
@@ -81,7 +81,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <state key="normal" title="Website">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </state>
                             <variation key="default">
                                 <mask key="constraints">
@@ -110,7 +110,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <state key="normal">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </state>
                             <variation key="default">
                                 <mask key="constraints">
@@ -119,7 +119,7 @@
                             </variation>
                             <variation key="heightClass=regular-widthClass=compact">
                                 <mask key="constraints">
-                                    <include reference="lAc-Bz-6Hr"/>
+                                    <exclude reference="lAc-Bz-6Hr"/>
                                 </mask>
                             </variation>
                             <connections>
@@ -133,7 +133,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                             <state key="normal" title="Directions">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </state>
                             <variation key="default">
                                 <mask key="constraints">
@@ -142,7 +142,7 @@
                             </variation>
                             <variation key="heightClass=regular-widthClass=compact">
                                 <mask key="constraints">
-                                    <include reference="rUF-2d-iA5"/>
+                                    <exclude reference="rUF-2d-iA5"/>
                                 </mask>
                             </variation>
                             <connections>
@@ -258,6 +258,7 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OTs-1h-Ffv">
                             <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                             <constraints>
+                                <constraint firstAttribute="height" constant="21" id="4RH-eh-K8s"/>
                                 <constraint firstAttribute="height" constant="20.5" id="f1X-sU-s5E"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -265,11 +266,13 @@
                             <nil key="highlightedColor"/>
                             <variation key="default">
                                 <mask key="constraints">
+                                    <exclude reference="4RH-eh-K8s"/>
                                     <exclude reference="f1X-sU-s5E"/>
                                 </mask>
                             </variation>
                             <variation key="heightClass=regular-widthClass=compact">
                                 <mask key="constraints">
+                                    <include reference="4RH-eh-K8s"/>
                                     <exclude reference="f1X-sU-s5E"/>
                                 </mask>
                             </variation>
@@ -277,6 +280,7 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cuisine" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ryd-pY-A6c">
                             <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                             <constraints>
+                                <constraint firstAttribute="height" constant="21" id="I7C-rO-NKn"/>
                                 <constraint firstAttribute="height" constant="20.5" id="VgC-lS-vyk"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -284,11 +288,13 @@
                             <nil key="highlightedColor"/>
                             <variation key="default">
                                 <mask key="constraints">
+                                    <exclude reference="I7C-rO-NKn"/>
                                     <exclude reference="VgC-lS-vyk"/>
                                 </mask>
                             </variation>
                             <variation key="heightClass=regular-widthClass=compact">
                                 <mask key="constraints">
+                                    <include reference="I7C-rO-NKn"/>
                                     <exclude reference="VgC-lS-vyk"/>
                                 </mask>
                             </variation>
@@ -446,6 +452,7 @@
                         <constraint firstItem="AsW-i3-uaW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="28" id="VsO-98-cgd">
                             <variation key="heightClass=regular-widthClass=compact" constant="13"/>
                         </constraint>
+                        <constraint firstItem="FEh-Es-v55" firstAttribute="height" secondItem="b1z-yj-aQE" secondAttribute="height" id="X9I-Qn-lsM"/>
                         <constraint firstAttribute="height" constant="1036" id="XYa-Ms-oxP"/>
                         <constraint firstItem="OTs-1h-Ffv" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="28" id="XnB-Xd-xMX">
                             <variation key="heightClass=regular-widthClass=compact" constant="13"/>
@@ -471,6 +478,7 @@
                         <constraint firstItem="YIm-fg-qe7" firstAttribute="centerX" secondItem="R2U-0P-Ydi" secondAttribute="centerX" id="hSU-ET-Uva"/>
                         <constraint firstItem="A3s-HN-Yck" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="hjD-C4-jwW"/>
                         <constraint firstItem="FEh-Es-v55" firstAttribute="centerY" secondItem="b1z-yj-aQE" secondAttribute="centerY" id="ibt-W3-iTm"/>
+                        <constraint firstItem="b1z-yj-aQE" firstAttribute="height" secondItem="WR9-fd-u9u" secondAttribute="height" id="lh8-MT-awA"/>
                         <constraint firstItem="z7h-t9-Zyq" firstAttribute="top" secondItem="5CU-NH-V2c" secondAttribute="bottom" constant="12" id="mR6-KY-FzL"/>
                         <constraint firstItem="ksA-Ni-aa3" firstAttribute="leading" secondItem="3gD-U6-fbe" secondAttribute="trailing" constant="8" id="n5E-bH-0t1">
                             <variation key="heightClass=regular-widthClass=compact" constant="23"/>
@@ -484,6 +492,7 @@
                         </constraint>
                         <constraint firstAttribute="trailing" secondItem="ksA-Ni-aa3" secondAttribute="trailing" constant="14" id="tpL-ln-owP"/>
                         <constraint firstItem="WR9-fd-u9u" firstAttribute="width" secondItem="rmK-P0-vtG" secondAttribute="width" id="uQO-oq-IjU"/>
+                        <constraint firstItem="WR9-fd-u9u" firstAttribute="height" secondItem="rmK-P0-vtG" secondAttribute="height" id="vY1-at-wuT"/>
                         <constraint firstAttribute="bottom" secondItem="z7h-t9-Zyq" secondAttribute="bottom" constant="20" id="wgG-1u-0yI"/>
                         <constraint firstAttribute="trailing" secondItem="A3s-HN-Yck" secondAttribute="trailing" id="wxp-SL-EpU"/>
                         <constraint firstItem="A3s-HN-Yck" firstAttribute="top" secondItem="b1z-yj-aQE" secondAttribute="bottom" constant="10" id="yEe-be-Uhe"/>
@@ -534,6 +543,7 @@
                             <exclude reference="TDB-u3-guq"/>
                             <exclude reference="zZb-R3-PF2"/>
                             <exclude reference="9X1-vg-Zu2"/>
+                            <exclude reference="X9I-Qn-lsM"/>
                             <exclude reference="Y7x-QN-f0r"/>
                             <exclude reference="YvN-dw-8dn"/>
                             <exclude reference="ibt-W3-iTm"/>
@@ -545,10 +555,12 @@
                             <exclude reference="EZg-Om-doS"/>
                             <exclude reference="Jca-yH-DC5"/>
                             <exclude reference="f68-R9-yXS"/>
+                            <exclude reference="lh8-MT-awA"/>
                             <exclude reference="ykZ-EX-8Xz"/>
                             <exclude reference="JtW-JZ-LE2"/>
                             <exclude reference="boe-NO-b5x"/>
                             <exclude reference="uQO-oq-IjU"/>
+                            <exclude reference="vY1-at-wuT"/>
                             <exclude reference="0nv-aY-ghD"/>
                             <exclude reference="n5E-bH-0t1"/>
                             <exclude reference="tpL-ln-owP"/>
@@ -621,6 +633,7 @@
                             <include reference="TDB-u3-guq"/>
                             <include reference="zZb-R3-PF2"/>
                             <include reference="9X1-vg-Zu2"/>
+                            <include reference="X9I-Qn-lsM"/>
                             <include reference="Y7x-QN-f0r"/>
                             <exclude reference="YvN-dw-8dn"/>
                             <exclude reference="ibt-W3-iTm"/>
@@ -632,10 +645,12 @@
                             <include reference="EZg-Om-doS"/>
                             <include reference="Jca-yH-DC5"/>
                             <include reference="f68-R9-yXS"/>
+                            <include reference="lh8-MT-awA"/>
                             <include reference="ykZ-EX-8Xz"/>
                             <include reference="JtW-JZ-LE2"/>
                             <include reference="boe-NO-b5x"/>
                             <include reference="uQO-oq-IjU"/>
+                            <include reference="vY1-at-wuT"/>
                             <include reference="0nv-aY-ghD"/>
                             <include reference="n5E-bH-0t1"/>
                             <include reference="tpL-ln-owP"/>
@@ -670,6 +685,8 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailing" id="0Qc-MU-rZy"/>
                 <constraint firstItem="iN0-l3-epB" firstAttribute="top" secondItem="KO0-BB-kJI" secondAttribute="top" id="3gg-mC-J94"/>
+                <constraint firstItem="iN0-l3-epB" firstAttribute="centerX" secondItem="KO0-BB-kJI" secondAttribute="centerX" id="47E-EJ-luT"/>
+                <constraint firstItem="iN0-l3-epB" firstAttribute="centerY" secondItem="KO0-BB-kJI" secondAttribute="centerY" id="VvG-WF-mxC"/>
                 <constraint firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="bottom" id="XFv-JH-ExG">
                     <variation key="heightClass=regular-widthClass=compact" constant="66"/>
                 </constraint>
@@ -683,6 +700,8 @@
                 <mask key="constraints">
                     <exclude reference="0Qc-MU-rZy"/>
                     <exclude reference="3gg-mC-J94"/>
+                    <exclude reference="47E-EJ-luT"/>
+                    <exclude reference="VvG-WF-mxC"/>
                     <exclude reference="XFv-JH-ExG"/>
                     <exclude reference="rMN-aP-47y"/>
                 </mask>
@@ -694,6 +713,8 @@
                 <mask key="constraints">
                     <include reference="0Qc-MU-rZy"/>
                     <include reference="3gg-mC-J94"/>
+                    <include reference="47E-EJ-luT"/>
+                    <exclude reference="VvG-WF-mxC"/>
                     <include reference="XFv-JH-ExG"/>
                     <include reference="rMN-aP-47y"/>
                 </mask>
