--- a/FoodPiper/ViewPeepMenu.xib
+++ b/FoodPiper/ViewPeepMenu.xib
@@ -76,13 +76,16 @@
                         </mask>
                     </variation>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mqx-5D-dsi">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mqx-5D-dsi" customClass="CancelIcon" customModule="FoodPiper" customModuleProvider="target">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="0Ra-mZ-Riy"/>
-                        <constraint firstAttribute="width" constant="39" id="xNY-zN-kLD"/>
+                        <constraint firstAttribute="height" constant="30" id="0Ra-mZ-Riy">
+                            <variation key="heightClass=regular-widthClass=compact" constant="50"/>
+                        </constraint>
+                        <constraint firstAttribute="width" constant="39" id="xNY-zN-kLD">
+                            <variation key="heightClass=regular-widthClass=compact" constant="50"/>
+                        </constraint>
                     </constraints>
-                    <state key="normal" title="Close"/>
                     <variation key="default">
                         <mask key="constraints">
                             <exclude reference="0Ra-mZ-Riy"/>
@@ -117,7 +120,9 @@
                     <variation key="heightClass=regular-widthClass=compact" constant="-7"/>
                 </constraint>
                 <constraint firstItem="bR1-3N-px9" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="L8c-nG-KiK"/>
-                <constraint firstItem="Mqx-5D-dsi" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Mhh-9N-iJE"/>
+                <constraint firstItem="Mqx-5D-dsi" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Mhh-9N-iJE">
+                    <variation key="heightClass=regular-widthClass=compact" constant="-11"/>
+                </constraint>
                 <constraint firstItem="bds-Q4-cMQ" firstAttribute="height" secondItem="L15-ah-g2o" secondAttribute="height" id="Nao-SG-ERR">
                     <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
                 </constraint>
