--- a/FoodPiper/ViewPeepMenu.xib
+++ b/FoodPiper/ViewPeepMenu.xib
@@ -103,7 +103,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.90000000000000002" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.12549019610000001" green="0.53725490200000003" blue="0.63921568630000003" alpha="0.95000000000000007" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="Mqx-5D-dsi" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="02J-ZL-EC4"/>
                 <constraint firstItem="bds-Q4-cMQ" firstAttribute="width" secondItem="L15-ah-g2o" secondAttribute="width" id="1wq-MP-7zx">
